other/restrict-node-selection/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-node-selection
policies:
- ../restrict-node-selection.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: restrict-node-selection
  resources:
  - default/myapp-pod-2
  result: fail
  rule: restrict-nodename
- kind: Pod
  policy: restrict-node-selection
  resources:
  - default/myapp-pod-1
  result: pass
  rule: restrict-nodename
- kind: Pod
  policy: restrict-node-selection
  resources:
  - default/myapp-pod-1
  result: fail
  rule: restrict-nodeselector
- kind: Pod
  policy: restrict-node-selection
  resources:
  - default/myapp-pod-2
  result: pass
  rule: restrict-nodeselector
